# NarcEngine

./: .clang-format  .gitattributes  .gitignore  Build And Run.bat  Build.bat  BuildFast.bat  CMakeLists.txt  CMakePresets.json  LICENCE  LICENSE  Launch Project.bat  Launch.bat  NOTICE  NarcEngine.sln  README.md
NarcEngine/: CMakeLists.txt  Engine.cpp  NarcEngine.vcxproj  NarcEngine.vcxproj.filters  main.cpp
NarcEngine/include/: Engine.h
NarcEngine/src/: Engine.cpp  NarcEngine.h
NarcEngine/src/NarcEngine/: Application.cpp  Engine.cpp  Engine.h
Sandbox/: CMakeLists.txt  main.cpp
Sandbox/src/: TestEngine.cpp
application/: CMakeLists.txt
application/include/: Application.h
application/src/: Application.cpp  main.cpp
cmake/: dependencies.cmake  (+4 more)
core/core/: CMakeLists.txt
core/core/include/: Events.h  NarcCore.h  pch.h
core/core/include/interfaces/: IGetter.h  IInitialisable.h  ILoadable.h
core/core/include/macros/: Format.h  GetterSetter.h
core/core/src/: Narcore.cpp
core/core/tests/: test_main.cpp
core/narc_engine/: CMakeLists.txt
core/narc_engine/include/: Application.h  Buffer.h  CommandBuffer.h  CommandPool.h  CommandPoolHandler.h  Core.h  DescriptorPool.h  DescriptorPoolBuilder.h  DeviceHandler.h  Engine.h  EngineDebugLogger.h  EntryPoint.h  NarcEngine.h  Pipeline.h  QueueFamilyIndices.h  SwapChain.h  SwapChainSupportDetails.h  UniformBufferObject.h  Vertex.h  pch.h
core/narc_engine/include/buffers/: Buffer.h  GraphicsBuffer.h  StaggingBuffer.h  UniformBuffer.h
core/narc_engine/include/core/: DeviceHandler.h  EngineBinder.h  EngineDebugLogger.h  Window.h
core/narc_engine/include/data/: Image.h  Mesh.h  Vertex.h
core/narc_engine/include/devices/: DeviceHandler.h
core/narc_engine/include/interfaces/: IEngine.h
core/narc_engine/include/io/: FileReader.h
core/narc_engine/include/models/: Vertex.h
core/narc_engine/include/renderer/: DepthResources.h  DescriptorPool.h  EngineRenderer.h  Pipeline.h  RenderPass.h  RenderTask.h  SwapChain.h
core/narc_engine/include/window/: Window.h
core/narc_engine/shaders/: compile-shaders.bat  compile_shaders.bat  shader.vert
core/narc_engine/src/: Application.cpp  Buffer.cpp  CommandBuffer.cpp  CommandPool.cpp  CommandPoolHandler.cpp  DescriptorPool.cpp  DeviceHandler.cpp  Engine.cpp  EngineDebugLogger.cpp  Pipeline.cpp  SwapChain.cpp
core/narc_engine/src/buffers/: Buffer.cpp  GraphicsBuffer.cpp  StaggingBuffer.cpp  UniformBuffer.cpp
core/narc_engine/src/core/: DeviceHandler.cpp  EngineBinder.cpp  EngineDebugLogger.cpp  EngineInstance.cpp  Window.cpp
core/narc_engine/src/data/: Mesh.cpp  Vertex.cpp
core/narc_engine/src/devices/: DeviceHandler.cpp
core/narc_engine/src/io/: FileReader.cpp
core/narc_engine/src/models/: Mesh.cpp
core/narc_engine/src/renderer/: DepthResources.cpp  DescriptorPool.cpp  EngineRenderer.cpp  RenderPass.cpp  RenderTask.cpp  SwapChain.cpp
core/narc_engine/src/window/: Window.cpp
core/narc_math/: CMakeLists.txt
core/narc_math/include/: Core.h  NarcMath.h  Transform.h  pch.h
core/narc_math/src/: NarcMath.cpp
core/narcio/: CMakeLists.txt
core/narcio/include/: Core.h  FileReader.h  NarcIO.h  pch.h
core/narcio/include/data/: Image.h
core/narcio/include/models/: Image.h  Model3D.h
core/narcio/src/: FileReader.cpp
core/narcio/tests/: test_main.cpp
core/narclog/: CMakeLists.txt
core/narclog/include/: ConsoleStyle.h  Core.h  FileLogger.h  Logger.h  NarcLog.h  NarcLogger.h  pch.h
core/narclog/include/exceptions/: ErrorException.h  ExceptionHandlerBuilder.h  FatalException.h  MethodExceptionHandler.h
core/narclog/include/keywords/: ConsoleStyle.h  KeyWords.h  LogFunctions.h  LogLevel.h
core/narclog/src/: FileLogger.cpp  Logger.cpp  NarcLog.cpp  NarcLogger.cpp
core/narclog/src/exceptions/: ExceptionHandlerBuilder.cpp  MethodExceptionHandler.cpp
core/narclog/tests/: test_main.cpp
editor/application/: CMakeLists.txt
editor/application/include/: Application.h  pch.h
editor/application/src/: Application.cpp  main.cpp
editor/application/tests/: test_main.cpp
rendering/: CMakeLists.txt
rendering/narc_engine/: CMakeLists.txt
rendering/narc_engine/include/: CommandBuffer.h  CommandPool.h  Core.h  Engine.h  NarcEngine.h  pch.h
rendering/narc_engine/include/buffers/: Buffer.h  GraphicsBuffer.h  StagingBuffer.h  UniformBuffer.h
rendering/narc_engine/include/core/: DeviceComponent.h  DeviceHandler.h  EngineBinder.h  EngineBuilder.h  EngineDebugLogger.h  EngineInstance.h  EngineResourcesManager.h  Window.h
rendering/narc_engine/include/gui/: GuiComponent.h  GuiWindow.h  NarcGui.h  UiRenderer.h
rendering/narc_engine/include/interfaces/: IEngine.h  IGuiHandle.h  IWindow.h
rendering/narc_engine/include/models/: Material.h  Mesh.h  PushConstants.h  Renderer.h  Shader.h  ShaderModule.h  UniformBufferObject.h  Vertex.h
rendering/narc_engine/include/render_graph/: DrawCall.h  GuiRenderNode.h  RenderGraph.h  RenderNode.h
rendering/narc_engine/include/renderer/: DepthResources.h  DescriptorPool.h  DescriptorPoolBuilder.h  EngineRenderer.h  FrameHandler.h  GraphicsPipeline.h  MultiFrameManager.h  RenderPass.h  RenderTask.h  SwapChain.h  SwapChainSupportDetails.h
rendering/narc_engine/include/resources/: GraphicResource.h  GraphicResourceHandler.h  GraphicResourceType.h  ImageView.h  Mesh.h  Resource.h  ResourceManager.h  ResourceState.h  ResourceType.h  Shader.h  Texture2DResource.h
rendering/narc_engine/include/sync/: Fence.h  Semaphore.h
rendering/narc_engine/include/utils/: EngineFunctions.h  EngineMacros.h  InternalTypedefs.h  PublicTypedefs.h  Utils.h
rendering/narc_engine/src/: CommandBuffer.cpp  CommandPool.cpp  Engine.cpp
rendering/narc_engine/tests/: test_engineInitialisation.h  test_includes.h  test_main.cpp  test_resourcesCreation.h
rendering/rhi/: CMakeLists.txt
rendering/rhi/include/: Rhi.h  pch.h
rendering/rhi/tests/: test_dependency_injection.cpp  test_main.cpp  test_rhi.h
rendering/shaders/: CMakeLists.txt  compile_shaders.py  shader.frag  shader.vert
tests/: CMakeLists.txt
tests/tests/: test_main.cpp
(+186 files in other folders)
